= cvs-fast-export project news =

1.59: 2021-09-20::
   Ubuntu deleted /usr/bin/python, switch all invocations to python3.

1.58: 2021-07-16::
   Document non-support of non-ASCII chracters in user IDs.

1.57: 2021-05-06::
   Abolish commit sorting by timestamp in the emit stage.

1.56: 2021-04-03::
   Document more exactly how dollar-cookie expansion works.
   Describe the known issues with vendor branches.
   Add support for dnf to buildprep.
   Don't choke on CVS-NT username attribute.
   cvsreduce renamed to cvsstrip for consistency with reposurgeon strip.

1.55: 2020-05-24::
   Document how to cope with branch cycle errors.

1.54: 2020-05-20::
   Document what an overrun of the branch depth limit looks like.

1.53: 2020-04-10::
   A new 'buildprep' script makes installation from source easier.

1.52: 2020-04-09::
   Incremental mode suppresses generation of default ignores.
   The -F and -C mode switches are gone; output is now always mode -C.

1.51: 2020-02-12::
   Keyword expansion default has been changed to match CVS's
   The -k option of cvs-fast-export has been removed.
   Add yet another required warning about time-skew effects.

1.50: 2020-01-02::
   Improvements and bugfixes in the release machinery.

1.49: 2019-12-10::
   Change error messages to modern GCC format.
   cvsconvert accepts an -A option for an authormap.
   Minor fix to -kv expansion.

1.48: 2019-04-26::
   cvsconvert now properly escapes branch names in shell commands.
   cvssync can now sync from a local cvs respository.
   Fix for a minor bug when reporting fixups on out-of-order commits.
   Strengthen documentation warnings about unreliability of CVS timestamps.

1.47: 2019-03-19::
   Deal gracefully with damaged attic files that yield null branch names.

1.46: 2019-03-18::
   Make cvsreduce do the right (escaping) thing when a filename contains @.
   In cvreduce, warn on files that aren't CVS masters.