@@ -1,5 +1,8 @@
 = cvs-fast-export project news =
 
+Repository head::
+   Fix for expansion of $ headers, doing what the manual actually says.
+
 1.59: 2021-09-20::
    Ubuntu deleted /usr/bin/python, switch all invocations to python3.
 
